--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" width="10px" content="width=device-width, initial-scale=1.0">
     <title>JJ | Front End Developer | Wordpress-Expert | Freelancer</title>
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="/css/generalstyle.css">
-    <link rel="stylesheet" href="/css/cssmenu.css">
+    <link rel="stylesheet" href="./css/generalstyle.css">
+    <link rel="stylesheet" href="./css/cssmenu.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -281,7 +281,7 @@
     <div id="seeall">
        <a href="#">See all articles....</a> 
     </div>
-    <div id="lastblock">
+    <div id="lastblock" >
         <div id="lastblocka">
             <div class="tagclass" id="tagposit2">
                 <span style="font-size: 3rem;">&lsaquo;</span> h2 <span style="font-size: 3rem;">&rsaquo;</span>
@@ -342,7 +342,7 @@
            
         </div>
         <div class="map">
-            bla <br> <br> <br> dfdt <br>
+            <img src="./images/map.PNG" alt="">
         </div>
        
     </div>
