--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </article>
 
     </section>
-    <section id="section2">
+    <section id="section2" class="makeappear">
         <div onmouseleave="levef(this)" onmouseleave="leavelink(1)" class="projectname">
             <a class="linkclose" onmouseover="showlink(this)" onmouseleave="leavelink(1)" href="#"><span>view <br>
                     project</span> </a>
@@ -228,7 +228,7 @@
                     ></span>
                 </div>
         </div>
-            <div class="articles">
+            <div class="articles makeappear2">
                 <div class="article">
                     <span class="articlefspan">SQL & DATABASES</span> 
                     <span class="articlesspan">Database Queries to One Table (Part 1)</span> 
@@ -311,7 +311,7 @@
             <div class="tagclass" id="tagposit5">
                 <span style="font-size: 3rem;">&lsaquo;</span> form <span style="font-size: 3rem;">&rsaquo;</span>
             </div>
-            <form action="">
+            <form action="" class="makeappear3">
                 <div id="nameemail">
                     <div id="input1" class="formbganim" onmouseover="turnbg()">
                         <input type="text" name="uname" id="uid" placeholder="Name">
